--- a/generosita.html
+++ b/generosita.html
@@ -6,6 +6,8 @@
   <title>Un gesto di generosità</title>
 
   <link rel="stylesheet" href="generosita.css">
+  <script src="generosita.js"  defer></script>
+  <script ></script>
 
       <link rel="stylesheet" href="https://use.typekit.net/qei0ryy.css">
       <link rel="stylesheet" href="https://use.typekit.net/hjz0ooj.css">
@@ -52,7 +54,7 @@
       <div class="bank-row">
         <div class="bank-label">Causale</div>
         <span class="bank-value" id="bank-bank">Regalo nozze</span>
-        <button class="copy-btn" data-copy="#bank-bank">Copia</button>
+        <button class="copy-btn" data-copy="#bank-regalo">Copia</button>
       </div>
     </div>
     <p class="bible-verse">
