--- a/info_utili.html
+++ b/info_utili.html
@@ -58,7 +58,7 @@
     <div class="info-box">
       <h3>Luogo cerimonia e cena</h3>
       <p>17:00 – Green Hills</p>
-      <p>Via Scalazza 42, Aci Castello (CT)</p>
+      <p>Via Cardinale Dusmet 42, Aci Castello (CT)</p>
       <a href="https://maps.app.goo.gl/gZM2kP2b3Typ1ZGM8" target="_blank" class="venue-btn">
         Apri in Google Maps
       </a>
