--- a/bus.html
+++ b/bus.html
@@ -38,7 +38,7 @@
       font-family: "sloop-script-one", sans-serif; 
       font-weight: 400; 
       font-style: normal;
-      font-size: 3.8rem;
+      font-size: 3rem;
       margin-bottom: 20px;
     }
 
@@ -128,6 +128,7 @@
   <div class="bus-box">
 
     <h2>Prenotazione Autobus</h2>
+    <p>da Gela al luogo della cerimonia</p><br>
     <p>ricordati di mandare la conferma al matrimonio prima di prenotare il tuo posto in autobus. <!--<a href="RSVP.html" class="venue-btn"> conferma la presenza</a>!--></p>
     
 
