--- a/info_utili.html
+++ b/info_utili.html
@@ -59,7 +59,7 @@
       <h3>Luogo cerimonia e cena</h3>
       <p>17:00 – Green Hills</p>
       <p>Via Cardinale Dusmet 42, Aci Castello (CT)</p>
-      <a href="https://maps.app.goo.gl/gZM2kP2b3Typ1ZGM8" target="_blank" class="venue-btn">
+      <a href="https://maps.app.goo.gl/g7e4jTCBE4NPwvJQ8" target="_blank" class="venue-btn">
         Apri in Google Maps
       </a>
 
@@ -68,7 +68,7 @@
         La sala è facilmente raggiungibile in auto dall'aeroporto di Catania (circa 20 minuti).
       </p>
       <p class="venue-text">
-       <strong> Per chi parte da Gela</strong>, stiamo valutando la possibilità di organizzare un autobus dedicato.
+       <strong> Per chi parte da Gela</strong>, stiamo valutando la possibilità di organizzare un autobus dedicato. <br>
         Se raggiunto il numero minimo di prenotazioni, metteremo a disposizione
         un servizio comodo e condiviso per raggiungere la sala tutti insieme. 
       </p>
@@ -146,10 +146,10 @@
   </div>
 </section>
 
-   
-   
-  <button type="button" class="rsvp-back" onclick="history.back()">Indietro</button>
-
+ 
+  <footer>
+    <p>&copy; 2026 Nuccio & Monica. All rights reserved.</p>
+  </footer>
     
 </body>
 </html>
