--- a/generosita.html
+++ b/generosita.html
@@ -21,13 +21,12 @@
     <h1>Un gesto di generosità</h1>
 
  
-    <p class="section-text">Negli ultimi mesi abbiamo concentrato energie, sogni e impegno per poter celebrare questo giorno.<br>
-      In questo percorso abbiamo visto la fedeltà di Dio in modi concreti e sorprendenti, permettendoci di raggiungere obiettivi che sembravano lontani.<br><br>
+    <p class="section-text">Negli ultimi mesi abbiamo concentrato energie, sogni e impegno per poter celebrare questo giorno, sperimentando la fedeltà di Dio in modi concreti e sorprendenti.<br> <br>
 
-      Ora inizia la sfida più bella: la quotidianità.<br>
+     <strong> Ora inizia la sfida più bella: la quotidianità. </strong><br>
       Costruire una casa, affrontare le responsabilità e le gioie della vita di ogni giorno.<br><br>
 
-      Se desideri investire nel nostro futuro — nella nostra prima auto, nella casa che prenderà forma, nel viaggio che celebrerà questo inizio o in tutto ciò che verrà — il tuo gesto sarà per noi un dono prezioso e profondamente apprezzato.</p>
+      Se desideri investire nel nostro futuro —<em> nella nostra prima auto, nella casa che prenderà forma, nella nostra luna di miele o in tutto ciò che verrà </em>— il tuo gesto sarà per noi un dono prezioso e profondamente apprezzato.</p>
     </p>
 
     <p class="section-title">Dati per contribuire</p>
@@ -56,6 +55,11 @@
         <span class="bank-value" id="bank-bank">Regalo nozze</span>
         <button class="copy-btn" data-copy="#bank-regalo">Copia</button>
       </div>
+      
+      <a href="paypal.me/nucciotabone?locale.x=it_IT" target="_blank" class="paypal-button">
+        Dona con PayPal
+      </a>
+
     </div>
     <p class="bible-verse">
       "Chi è benefico sarà nell’abbondanza, e chi annaffia sarà egli pure annaffiato."<br>
