--- a/generosita.html
+++ b/generosita.html
@@ -56,7 +56,7 @@
         <button class="copy-btn" data-copy="#bank-regalo">Copia</button>
       </div>
       
-      <a href="paypal.me/nucciotabone?locale.x=it_IT" target="_blank" class="paypal-button">
+      <a href="https://paypal.me/nucciotabone?locale.x=it_IT" target="_blank" class="paypal-button">
         Dona con PayPal
       </a>
 
